--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^10.1.0",
     "notiflix": "^3.2.6",
     "react": "^17.0.2",
+    "react-country-region-selector": "^3.6.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^8.1.2",
