--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-star-ratings": "^2.3.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.64.1",
     "scss": "^0.2.4",
