--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "firebase": "^10.1.0",
     "notiflix": "^3.2.6",
     "react": "^17.0.2",
+    "react-chartjs-2": "^5.2.0",
     "react-country-region-selector": "^3.6.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
